fix project page: menu and header alignment

--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -153,7 +153,7 @@ $size-4: 1.5rem !default
       margin: 0;
     }
     .menu-list a {
-      padding: 0.1em 0.75em;
+      padding: 0.1em 0;
     }
   }
 }
